--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,31 +1,6 @@
 @import "./variables.scss";
+@import "./animations.scss";
 
-header {
-    @include FlexColCenterCenter;
-    width: 100%;
-    height: 100vh;
-    flex-basis: 100%;
-    background-color: $secondaryColor;
-    @include Border;
-    border-bottom: 0.1rem solid $tiersColor;
-
-
-    .logo {
-        @include FlexRowCenter;
-        flex-direction: row;
-
-        figure {
-            @include FlexColCenterCenter;
-            flex-basis: 100%;
-
-            video {
-                max-width: 100%;
-                @include ResponsivImg;
-            }
-        }
-    }
-
-}
 
 main {
     @include FlexCol;
@@ -36,12 +11,30 @@ main {
     padding: 0.5rem;
     flex-grow: 1;
 
-    section:not(:last-child) {
+    section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        // min-height: 100vh;
+        margin-bottom: 25vh;
+    }
+
+    #aboutMe {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin-bottom: 25vh;
+        min-height: 80vh;
+        flex-basis: 50%;
     }
+
+    #skills {
+        // justify-content: center;
+        align-items: center;
+        flex-basis: 100%;
+        min-height: 60vh;
+    }
+
+    #introduction {}
 
 
     #introduction p {
@@ -61,93 +54,6 @@ main {
         }
     }
 
-    #contact {
-        @include SectionStyle;
-        text-align: center;
-
-        .contact-links {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            .contact-link {
-                flex-basis: 20%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            }
-
-            a {
-                font-size: 2rem;
-                color: $tiersColor;
-            }
-
-            .icon {
-                width: 3rem;
-            }
-        }
-
-    }
-}
-
-footer {
-    height: 10vh;
-    @include SectionStyle;
-    @include FlexRowCenter;
-
-    .copyright {
-        flex-basis: 50%;
-    }
-
-    .social-links {
-        @include Flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-basis: 50%;
-
-        a {
-            font-size: 2rem;
-            color: $tiersColor;
-        }
-
-        .icon {
-            width: 3rem;
-        }
-    }
-}
-
-// CTA - link to CV :
-.callToAction {
-    margin-top: 2rem;
-
-    button.callToAction {
-        padding: 0.5rem;
-        background-color: $tiersColor;
-        @include BorderRadius;
-        color: $fontColor;
-    }
-}
-
-.containerBackToTop {
-    @include Flex;
-    justify-content: flex-end;
-    flex-basis: 10%;
-    position: fixed;
-    bottom: 10vh;
-    right: 0.5rem;
-
-    .BackToTopButton {
-        width: 3rem;
-        height: 3rem;
-        padding: 0.5rem;
-        @include BorderRadiusCircle;
-
-        &:hover {
-            background-color: $tiersColor;
-            color: $fontColor;
-        }
-    }
 }
 
 // scroll categories : 
@@ -157,14 +63,17 @@ footer {
     flex-basis: 10%;
     margin: auto;
 
-    button{
+    button {
         border: none;
         background-color: transparent;
+        cursor: pointer;
     }
+
     .arrow {
-        width:4rem;
+        width: 4rem;
         border: none;
         background-color: transparent;
+        cursor: pointer;
     }
 
     .scrollButton {
@@ -191,37 +100,6 @@ footer {
     gap: 0.5rem;
 }
 
-.card {
-    @include FlexColCenterCenter;
-    flex-shrink: 0;
-    height: 20rem;
-    flex-basis: 48%;
-    padding: 0.625rem;
-    align-items: flex-start;
-    gap: 0.625rem;
-    border-radius: 0.3125rem;
-    border: 1px solid $tiersColor;
-    background: $cardColor;
-
-    .icon {
-        display: flex;
-        align-items: end;
-        flex-basis: 25%;
-        width: 4rem;
-        color: $tiersColor;
-    }
-
-    .skillName {
-        flex-basis: 20%;
-        font-size: 2rem;
-        font-weight: bold;
-    }
-
-    .skill-description {
-        flex-basis: 60%;
-    }
-
-}
 
 .title_section {
     flex-basis: 20%;
@@ -264,58 +142,6 @@ footer {
     gap: 0.5rem;
 }
 
-// section portfolio : 
-.card.portfolioCard {
-    align-items: center;
-    flex-basis: 48%;
-    height: auto;
-
-    .projectName {
-        flex-basis: 10%;
-        width: 100%;
-        text-align: center
-    }
-
-    figure.image {
-        @include FlexRowCenter;
-        flex-basis: 60%;
-
-        img {
-            width: 50%;
-            height: auto;
-        }
-    }
-
-    .description {
-        flex-basis: 20%;
-
-    }
-
-    .social-Dev-Links {
-        @include Flex;
-        justify-content: space-around;
-        flex-basis: 100%;
-        width: 100%;
-
-        .githubLink,
-        .codeSandBoxLink {
-            @include FlexRowCenter;
-            flex-basis: 50%;
-
-            a {
-                font-size: 2.5rem;
-                color: $tiersColor;
-            }
-        }
-
-    }
-
-    .type {
-        flex-basis: 10%;
-        font-style: italic;
-    }
-
-}
 
 // pseudo class : 
 .active {
