--- a/src/components/CTA/ClickToAction.scss
+++ b/src/components/CTA/ClickToAction.scss
@@ -5,8 +5,8 @@
 .callToAction {
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-bottom: 1rem ;
+    justify-content: right;
+    margin-bottom: 0.5rem ;
 
     button.callToAction {
         padding: 0.5rem;
