--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -4,15 +4,17 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 15rem;
+  height: 80vh;
   opacity: 1;
   transition: opacity 0.3s;
+  z-index: 1;
 }
 
 .liste {
   list-style-type: none;
-  background: $cardColor;
+  background-color: $cardColor;
   min-height: 100%;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,11 +22,16 @@ nav {
   border-bottom: 0.2rem solid $tiersColor;
 }
 
+a{
+  line-height: 6rem;
+}
+
 .items {
   margin-right: 1rem;
   font-size: $linkSize;
   color: $fontColor;
   cursor: pointer;
+  margin-top: 1rem;
 }
 
 .btn {
@@ -65,12 +72,26 @@ nav {
 
 @media screen and (min-width: 991px) {
   nav {
-    height: 10vh;
+    height: 100vh;
     opacity: 1;
+  }
+  
+  .liste{
+    display: flex;
+    flex-direction: column;
+    width: 10vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background-color: $cardColor;
+    
   }
 
   .items {
-    font-size: 2rem;
+    font-size: 3rem;
+    line-height: 4rem;
 
     &:hover {
       color: $tiersColor;
