--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,9 +5,9 @@
 main {
     @include FlexCol;
     justify-content: space-around;
-    min-height: 100vh;
+    min-height: 25vh;
     width: 90%;
-    margin: 25vh auto;
+    margin: auto;
     padding: 0.5rem;
     flex-grow: 1;
 
@@ -15,8 +15,8 @@ main {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        // // min-height: 100vh;
-        // margin-bottom: 25vh;
+        min-height: 25vh;
+        margin-bottom: 10vh;
     }
 
     #aboutMe {
@@ -153,6 +153,18 @@ button.active {
     color: white;
 }
 
+@media screen and (max-width: 425px){
+
+    header{
+        background-color: orange;
+        height: 15vh;
+        width: 100%;
+    }
+
+    // video{
+    //     display: none;
+    // }
+}
 // responsive : 
 @media screen and (min-width: 1024px) {
 
