--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -4,17 +4,17 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 80vh;
+  height: 50vh;
   opacity: 1;
   transition: opacity 0.3s;
-  z-index: 1;
+  // z-index: 1;
 }
 
 .liste {
   list-style-type: none;
   background-color: $cardColor;
   min-height: 100%;
-  height: 50vh;
+  // height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,7 +51,7 @@ a{
 }
 
 // responsive : 
-@media screen and (min-width: 425px) and (max-width: 990px) {
+@media screen and (min-width: 425px) and (max-width: 768px) {
   .liste {
     flex-direction: column;
     height: 20rem;
@@ -66,42 +66,6 @@ a{
 
   .btn {
     display: block;
-  }
-
-}
-
-@media screen and (min-width: 991px) {
-  nav {
-    height: 100vh;
-    opacity: 1;
-  }
-  
-  .liste{
-    display: flex;
-    flex-direction: column;
-    width: 10vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    background-color: $cardColor;
-    
-  }
-
-  .items {
-    font-size: 3rem;
-    line-height: 4rem;
-
-    &:hover {
-      color: $tiersColor;
-    }
-  }
-
-  @media (min-height: 100px) {
-    nav {
-      opacity: 0.6;
-    }
   }
 
 }
