--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -26,3 +26,9 @@ header {
     }
 
 }
+
+// @media screen and (min-width : 425px) and (max-width: 768px){
+//     header{
+//         display: none;
+//     }
+// }
