--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -33,9 +33,6 @@ main {
         min-height: 60vh;
     }
 
-    #introduction {}
-
-
     #introduction p {
         flex-basis: 25%;
     }
@@ -153,19 +150,20 @@ button.active {
     color: white;
 }
 
-@media screen and (max-width: 425px){
-
-    header{
-        background-color: orange;
-        height: 15vh;
-        width: 100%;
-    }
-
-}
 // responsive : 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
 
     body {
         font-size: 2rem;
+    }
+
+    main{
+        width: 70%;
+    }
+}
+
+@media screen and (min-width: 1440px){
+    main{
+        width: 40%;
     }
 }
