--- a/src/sass/reset.scss
+++ b/src/sass/reset.scss
@@ -16,7 +16,7 @@ html {
 
 body {
     @include FlexCol;
-    height: 100vh;
+    min-height: 100vh;
     background-color: $primaryColor;
     font-size: 1.6rem;
     font-family: 'Roboto', sans-serif;
