--- a/src/components/Cards/Card.scss
+++ b/src/components/Cards/Card.scss
@@ -2,12 +2,10 @@
 
 .card {
     @include FlexColCenterCenter;
-    flex-shrink: 0;
-    height: 20rem;
+    height: 25rem;
     flex-basis: 48%;
-    padding: 0.625rem;
-    align-items: flex-start;
-    gap: 0.625rem;
+    padding: 0.5rem;
+    gap: 1rem;
     border-radius: 0.3125rem;
     border: 1px solid $tiersColor;
     background: $cardColor;
@@ -15,18 +13,20 @@
     .icon {
         display: flex;
         align-items: end;
-        flex-basis: 25%;
+        flex-basis: 20%;
         width: 4rem;
         color: $tiersColor;
     }
-
+    
     .skillName {
+        @include FlexColCenter;
         flex-basis: 20%;
         font-size: 2rem;
         font-weight: bold;
     }
 
     .skill-description {
+        @include FlexRowCenterCenter;
         flex-basis: 60%;
     }
 
