--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,8 +3,9 @@
 header {
     @include FlexColCenterCenter;
     width: 100%;
-    height: 50vh;
-    flex-basis: 100%;
+    height: 25%;
+    flex-basis: 15%;
+    margin-bottom: 10vh;
     background-color: $secondaryColor;
     @include Border;
     border: 0.1rem solid $tiersColor;
@@ -12,15 +13,14 @@ header {
     
     .logo {
         @include FlexRowCenter;
-        flex-direction: row;
         
         figure {
             @include FlexColCenterCenter;
             flex-basis: 100%;
             
             video {
-                max-width: 100%;
-                @include ResponsivImg;
+                width: 55%;
+                height: auto;
             }
         }
     }
