--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,6 @@
 main {
     @include FlexCol;
     justify-content: space-around;
-    min-height: 25vh;
     width: 90%;
     margin: auto;
     padding: 0.5rem;
@@ -13,18 +12,19 @@ main {
 
     section {
         @include FlexCol;
-        justify-content: space-evenly;
-        min-height: 25vh;
-        margin-bottom: 10vh;
+        justify-content: center;
+        align-items: center;
+        min-height: 50vh;
     }
 
-    #aboutMe {
+    #aboutMe{
         @include FlexColCenter;
         min-height: 80vh;
-        flex-basis: 50%;
+        flex-basis: 100%;
     }
 
     #skills {
+        justify-content: center;
         align-items: center;
         flex-basis: 100%;
         min-height: 60vh;
