--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -3,6 +3,8 @@
 #contact {
     @include SectionStyle;
     text-align: center;
+    flex-basis: 90%;
+    width: 90%;
 
     .contact-links {
         @include FlexRowCenterCenter;
