--- a/src/components/Cards/Card.scss
+++ b/src/components/Cards/Card.scss
@@ -30,4 +30,9 @@
         flex-basis: 60%;
     }
 
+    &:hover{
+        transition: all 0.2s ease-in-out;
+        transform: scale(1.1);
+    }
+
 }
