--- a/src/sass/reset.scss
+++ b/src/sass/reset.scss
@@ -24,9 +24,8 @@ body {
 .wrapper {
     display: flex;
     flex-direction: column;
-    min-width: 80vw;
-    max-width: $maxWidth;
-    min-height: 100vh;
+    max-width: 99rem;
+    height: 100vh;
     margin: auto;
     padding: 0 1rem;
 
