--- a/src/components/CTA/ClickToAction.scss
+++ b/src/components/CTA/ClickToAction.scss
@@ -7,6 +7,7 @@
     justify-content: right;
     align-items: center;
     width: 100%;
+    margin-top: 1.5rem;
 
     button.callToAction {
         padding: 0.5rem;
