--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -141,6 +141,10 @@ main {
     gap: 0.5rem;
 }
 
+#portFolio{
+    align-items: center;
+    justify-content: center;
+}
 
 // pseudo class : 
 .active {
